[Finishes 59813542]: change string, fix wrapping and padding, draw top-left logo over rest of header

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -341,6 +341,8 @@ a.level_link:active { color: white; font-weight: 400; background-color: black; }
   float: left;
   left: 25px;
   min-width: 86px;
+  z-index: 1;
+  background-color: $bkgnd_color;
 }
 
 .header_middle {
@@ -469,13 +471,14 @@ a.level_link:active { color: white; font-weight: 400; background-color: black; }
 }
 
 .reference_area {
-  margin-top: 30px;
+  margin-top: 20px;
   width: 400px;
 
   .help_title {
     color: #1180be;
     font-weight: bold;
     font-size: 17.5px;
+    display: inline-block;
   }
 
   .video_link {
@@ -489,6 +492,9 @@ a.level_link:active { color: white; font-weight: 400; background-color: black; }
     width: 183px;
   }
 
+  .help_subtitle {
+    display: inline-block;
+  }
 }
 
 #notes {
